@@ -153,6 +153,22 @@ static const WinPilotPolar WinPilotPolars[] =
   { _T("Delta USHPA-2"), 100, 0, 30, -1.10, 44.3,  -1.52,  58.0, -3.60,  0},
   { _T("Delta USHPA-3"), 100, 0, 37, -0.95, 48.1,  -1.15,  73.0, -3.60,  0},
   { _T("Delta USHPA-4"), 100, 0, 37, -0.89, 48.3,  -1.02,  76.5, -3.30,  0},
+
+  { _T("Ventus 2cT (18m)"), 410, 110, 110.0, -0.62, 150.0, -1.2, 214.0, -2.3, 11.03},
+  { _T("Ventus 2cxT (18m)"), 470, 130, 100.0, -0.56, 150.0, -1.13, 200.0, -2.28, 11.03},
+  { _T("Blanik L13"), 472, 0, 85.0, -0.84, 143.0, -3.32, 200.0, -9.61, 19.1},
+  { _T("Blanik L23"), 510, 0, 95.0, -0.94, 148.0, -2.60, 200.0, -6.37, 19.1},
+  { _T("DG1000-20M (PIL)"), 490, 160, 100.0, -0.59, 120.0, -0.86, 150.0, -1.65, 17.51},
+  { _T("DG1000-20M (PAS)"), 613, 160, 106.0, -0.62, 153.0, -1.53, 200.0, -3.2, 17.51},
+  { _T("Mosquito"), 450, 0, 100.0, -0.68, 120.0, -0.92, 150.0, -1.45, 9.85},
+  { _T("DuoDiscus T (PAS)"), 615, 80, 103, -0.64, 152, -1.25, 200, -2.51, 16.4},
+  { _T("Jantar Std 48-2"), 375, 150, 100, -0.73, 120, -0.95, 150, -1.60, 10.66},
+  { _T("Mini Nimbus"), 345, 155, 100, -0.69, 120, -0.92, 150, -1.45, 9.86},
+  { _T("Pegase 101A"), 344, 120, 85.0, -0.62, 105, -0.75, 175, -2.54, 10.5},
+
+  { _T("SZD-48-3 Jantar 3"), 326, 150, 95, -0.66, 180, -2.24, 220, -3.85, 10.66},
+  { _T("SZD-51-1 Junior"), 333, 0, 70, -0.58, 130, -1.6, 180, -3.6, 12.51},
+  { _T("SZD-9 bis 1E Bocian"), 540, 0, 70, -0.83, 90, -1.00, 140, -2.53, 20},
 };
 
 /**
