@@ -18,6 +18,7 @@ Changes to version 6.0.2 (since 6.0.1):
   - Task: fix crash when drawing deformed sectors
 * data files
   - Fixed potential crash while reading airfields files
+  - Added more polars (Hang gliders, DG1000, Blanik, Jantar, ...)
 
 Changes to version 6.0.1 (since 6.0):
 * map
